cmake_minimum_required(VERSION 3.2)

PROJECT(toluapp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(TOLUAPP_VERSION_MAJOR "1")
SET(TOLUAPP_VERSION_MINOR "0")
SET(TOLUAPP_VERSION_PATCH "1")
SET(TOLUAPP_VERSION "${TOLUAPP_VERSION_MAJOR}.${TOLUAPP_VERSION_MINOR}.${TOLUAPP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${TOLUAPP_VERSION}")

OPTION(USE_TOLUAPP "use toluapp" OFF)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/tolua)

FILE(GLOB DMLUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
)

LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

FILE(GLOB LUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
)

IF (WIN32)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)
    SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
ELSEIF (APPLE)
    ADD_DEFINITIONS(-DLUA_USE_MACOSX)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53 dl)
ELSEIF (UNIX)
    ADD_DEFINITIONS(-DLUA_USE_LINUX)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
    SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-E" )
    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53 m dl)
ENDIF ()

LibImport("tolua" "src/tolua")
ExeImport("tools" "tolua;lua53")

set_property(TARGET toluapp PROPERTY OUTPUT_NAME tolua++)
#ADD_CUSTOM_COMMAND(
#TARGET toluapptest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:toluapptest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS toluapp
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(TOLUAPP_LIBS "toluapp")
#MARK_AS_ADVANCED(${TOLUAPP_LIBS})